2012-01-26  Sergio Martin <sergio.martin@artica.es>

	* include/integria_cron.php
	operation/side_menu.php
	godmode/setup/setup_pandora.php: Added to the cron
	a Pandora agents synchronization with Integria 
	inventory objects

2012-01-24  Sergio Martin <sergio.martin@artica.es>

	* include/styles/integria.css: Fixed some style
	errors in upload control

	* operation/download/browse.php: Fixed search pattern
	in the file releases combo

2012-01-24  Sergio Martin <sergio.martin@artica.es>

	* include/functions_html.php
	operation/invoices/invoices.php: Fixed some details in
	the upload forms and fixed the invoices form adding 
	upload missed feature and fixing some bugs

2012-01-24  Sergio Martin <sergio.martin@artica.es>

	* include/functions_html.php
	operation/invoices/invoices.php
	operation/projects/task_cost.php: Fixed latest upload
	controls implementations. Improved the upload 
	control function to allow set the control in any place
	into de form

2012-01-23  Sergio Martin <sergio.martin@artica.es>

	* include/functions_api.php
	include/functions_incidents.php
	include/functions_db.php: Fixed several bugs of the 
	Web API integration with Pandora. Returning more 
	info of the Incident creation and more fixes 

2012-01-23  Sergio Martin <sergio.martin@artica.es>

	* include/styles/integria.css
	include/js/integria_incident_search.js
	operation/incidents/incident_attach_file.php: Fixed 
	some style errors for IE and size of upload file dialog

	* include/functions_api.php: Fixed group asignation
	when create a incident without group

2012-01-23  Sergio Martin <sergio.martin@artica.es>

	* include/js/jquery.axuploader.js: Fixed IE8 ajax
	error in the uploader for missed quote
	* operation/incidents/incident_attach_file.php: Reduce one row
	the textarea of file description to allow the new file loader size

2012-01-20  Sergio Martin <sergio.martin@artica.es>

	* include/styles/integria.css
	include/js/jquery.axuploader.js: Fixed ugly styles